2008-03-17  David Wetzel <dave@turbocat.de>
        GSWeb.framework/GSWAssociation.h/m
        + bindingInComponent

        GSWeb.framework/GSWPrivate.h
        + _setValueNoValidation: inComponent: 

        GSWeb.framework/GSWBindingNameAssociation.m
        * re-wrote initWithKeyPath:

2008-03-11  David Wetzel <dave@turbocat.de>
        GSWAdaptors/Apache2/mod_gsw.c
        * fixed http status bug

2008-03-10  David Wetzel <dave@turbocat.de>
        GSWAdaptors/Apache2/mod_gsw.c
        * use shared memory to share application statistics across httpd processes
        * first version of load balancing

2008-03-09  David Ayers  <ayers@fsfe.org>

	* GSWeb.framework/GSWRequest.m (_getFormValuesFromMultipartFormData):
	Determine character set for parser by invoking charsetFromEncoding:
	on document instead of parser.

	* GSWeb.framework/GSWApplication+Defaults.m ([+host]): Set default
	host to localhost.

2008-03-04  David Wetzel <dave@turbocat.de>
	
        GSWeb.framework/GSWPageDefElement.m
        GSWeb.framework/GSWTemplateParserXML.h
        GSWeb.framework/GSWTemplateParserXML.m
        GSWeb.framework/GSWPageDefParserExt.h
        GSWeb.framework/GSWPageDefParserExt.m
        GSWeb.framework/NSObject+IVarAccess+PerformSel.h
        GSWeb.framework/NSObject+IVarAccess+PerformSel.m
        GSWeb.framework/GSWHTMLAttrParserExt.h
        GSWeb.framework/GSWHTMLAttrParserExt.m
        GSWeb.framework/GSWHTMLParserExt.h
        GSWeb.framework/GSWHTMLParserExt.m
        GSWeb.framework/GSWPageDefParserTokenTypes.txt
        GSWeb.framework/GSWPageDefElement.h
        * deleted unused code
        GSWeb.framework/GSWWOCompatibility.h
        * removed define

2008-03-02  David Wetzel <dave@turbocat.de>
        GSWeb.framework/GSWHTTPIO.m
        * optimized readDataLine
        * deleted all references to ANTLR

2008-03-01  David Wetzel <dave@turbocat.de>
        * GSWAdaptors/Apache2/mod_gsw.c
        read POST data before contacting the app
