@@ -8,6 +8,9 @@
         GSWeb.framework/GSWBindingNameAssociation.m
         * re-wrote initWithKeyPath:
 
+	GSWAdaptors/Apache2/mod_gsw.c
+        * various fixes
+
 2008-03-11  David Wetzel <dave@turbocat.de>
         GSWAdaptors/Apache2/mod_gsw.c
         * fixed http status bug
